--- a/requirements.txt
+++ b/requirements.txt
@@ -9,25 +9,34 @@ google-api-python-client==2.0.2
 google-auth==1.28.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.3
+google-cloud-core==1.6.0
+google-cloud-datastore==2.1.0
 googleapis-common-protos==1.53.0
+grpcio==1.36.1
 gunicorn==20.0.4
 httplib2==0.19.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
+libcst==0.3.17
 MarkupSafe==1.1.1
+mypy-extensions==0.4.3
 oauth2client==4.1.3
 oauthlib==3.1.0
 packaging==20.9
+proto-plus==1.18.1
 protobuf==3.15.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
 uritemplate==3.0.1
 urllib3==1.26.4
 Werkzeug==1.0.1
